--- a/ASPMVCWEbApiSample/CallWebApi/Default.html
+++ b/ASPMVCWEbApiSample/CallWebApi/Default.html
@@ -18,7 +18,7 @@
                         {
                             url: 'http://localhost:39773/api/values',
                             type: 'GET',
-                            datatype: 'json',
+                            datatype: 'jsonp',
                             success: function (data)
                             {
                                 alert(data.Name);
