--- a/ASPMVCWEbApiSample/CallWebApi/Default.html
+++ b/ASPMVCWEbApiSample/CallWebApi/Default.html
@@ -21,7 +21,7 @@
                             datatype: 'jsonp',
                             success: function (data)
                             {
-                                alert(data.Name);
+                                alert(data);
                             }
                         }
                         )
